--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^7.5.1",
     "reactflow": "^11.10.4",
     "resend": "^4.4.0",
+    "sonner": "^2.0.3",
     "uuid": "^11.1.0",
     "zustand": "^4.5.2"
   },
