--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ci-info": "^4.2.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "framer-motion": "^12.9.4",
     "lucide-react": "^0.344.0",
     "nodemailer": "^6.10.1",
     "openai": "^4.95.1",
@@ -26,6 +27,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.1",
     "reactflow": "^11.10.4",
     "resend": "^4.4.0",
