--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "reactflow": "^11.10.4",
     "resend": "^4.4.0",
     "sonner": "^2.0.3",
+    "swr": "^2.3.3",
     "uuid": "^11.1.0",
     "zustand": "^4.5.2"
   },
