Geração de Logger da KAI

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite --config vite.config.ts",
+  "build": "vite build --config vite.config.ts",
+  "preview": "vite preview --config vite.config.ts",
+  "lint": "eslint ."
+},
   "dependencies": {
     "@floating-ui/react": "^0.27.8",
     "@floating-ui/react-dom": "^2.1.2",
