--- a/netlify.toml
+++ b/netlify.toml
@@ -13,6 +13,12 @@
   force = true
 
 [[redirects]]
+from = "/.netlify/functions/*"
+to = "/.netlify/functions/:splat"
+status = 200
+force = true
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
