--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.1",
     "ci-info": "^4.2.0",
     "clsx": "^2.1.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.344.0",
