--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@headlessui/react": "^2.2.3",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@reactflow/node-resizer": "^2.2.11",
-    "@supabase/supabase-js": "^2.39.7",
+    "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.1",
     "ci-info": "^4.2.0",
     "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
+    "csv-parser": "^3.2.0",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.4",
     "lucide-react": "^0.344.0",
     "nodemailer": "^6.10.1",
