--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.344.0",
     "nodemailer": "^6.10.1",
     "openai": "^4.95.1",
+    "openai-edge": "^1.2.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
